[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Character/Enemies/ghost_enemy.png" type="Texture" id=1]
[ext_resource path="res://EnemyBase.gd" type="Script" id=2]
[ext_resource path="res://HP.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 256.0

[node name="EnemyBase" type="KinematicBody2D" groups=[
"Enemies",
]]
collision_layer = 8
collision_mask = 15
script = ExtResource( 2 )
max_hp = 20
damage = 1
speed = 150

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -0.0722961, -9.94765, -2.89254, -10.0103, -5.0234, -7.94214, -4.96073, -2.05095, -3.95797, -1.0482, -2.95522, -0.0454407, -2.95522, 5.97109, 2.05856, 6.8485, 3.12399, 6.91117, 3.06132, -0.170786, 5.00415, -2.1763, 4.94148, -8.00481, 2.8733, -9.94765 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HP" parent="." instance=ExtResource( 3 )]
margin_left = -7.7755
margin_top = -14.741
margin_right = -7.7755
margin_bottom = -14.741
rect_scale = Vector2( 0.25, 0.25 )

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="." groups=[
"Enemies",
]]
collision_layer = 8
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PoolVector2Array( -0.00854492, -9.92971, -3.00308, -9.92971, -4.93802, -7.9487, -4.93802, -2.05177, -2.95701, -0.0246944, -3.00308, 6.97792, 2.98599, 6.93185, 3.03206, 0.0213757, 4.92093, -2.09784, 4.92093, -7.9487, 2.93992, -9.97578 )
[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
